@@ -30,4 +30,5 @@ BUGFIXES FROM BUGZILLA:
 021 ==> 369345 - In tagging apply to all versions fails.
 022 ==> 370631 - Converting ARW to DNG fails.
 023 ==> 370175 - Cannot Import Images (Failed to detect camera with GPhoto2 from Solid information).
-024 ==> 
+024 ==> 370958 - Cannot save a scanned image.
+025 ==> 
